update before repo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(results_to_tib)
 export(scatterplot_retrieval)
 export(simulate_data_crm)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,is.count)
+importFrom(assertthat,is.flag)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_abline)
