--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,27 +2,45 @@
 
 S3method(log_likelihood_ltm,data.frame)
 S3method(log_likelihood_ltm,ltm_data)
+S3method(simulate_logistic_regression,default)
+S3method(simulate_logistic_regression,ltm_data)
+export(add_implied_thresholds)
 export(add_true_values_to_em_tib)
 export(add_true_values_to_tib)
 export(benchmark_table)
 export(compile_stan_model)
 export(crm_data_2_stan)
+export(dELGW)
 export(data_2_init)
 export(dordered)
 export(em_tib_to_init)
 export(fit_em)
 export(get_means_tib)
+export(inspect_probability_plot)
 export(log_likelihood_ltm)
+export(logistic_regression_ltm_data_2_stan)
 export(ltm_data_2_stan)
+export(obs_proportions)
+export(pELGW)
 export(pplot)
+export(qELGW)
+export(rELGW)
+export(read_data)
+export(read_long_data)
+export(read_wide_data)
+export(read_wider_data)
+export(read_wider_imputed_data)
 export(results_to_tib)
 export(rordered)
+export(save_or_run_model)
 export(scatterplot_retrieval)
 export(simulate_data_crm)
 export(simulate_data_ltm)
+export(simulate_logistic_regression)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.count)
 importFrom(assertthat,is.flag)
+importFrom(assertthat,is.number)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_abline)
