--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 S3method(data_2_stan,crm_data)
 S3method(data_2_stan,logistic_regression_ltm_data)
 S3method(data_2_stan,ltm_data)
+S3method(get_no_covariates,logistic_regression_data)
+S3method(get_no_covariates,logistic_regression_ltm_data)
+S3method(get_score,logistic_regression_ltm_data)
+S3method(get_score,ltm_data)
 S3method(log_likelihood_ltm,data.frame)
 S3method(log_likelihood_ltm,ltm_data)
 S3method(simulate_logistic_regression,default)
@@ -19,9 +23,20 @@ export(dordered)
 export(em_tib_to_init)
 export(fit_em)
 export(get_means_tib)
+export(get_nc)
+export(get_ni)
+export(get_no_covariates)
+export(get_no_rater_groups)
+export(get_no_time_points)
+export(get_np)
+export(get_nr)
+export(get_obs_proportions)
+export(get_score)
 export(inspect_probability_plot)
+export(is.logistic_regression_data)
+export(is.logistic_regression_ltm_data)
+export(is.ltm_data)
 export(log_likelihood_ltm)
-export(obs_proportions)
 export(pELGW)
 export(pplot)
 export(qELGW)
