now using Rcpp + fixed probs in stan model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,14 @@ export(add_true_values_to_em_tib)
 export(add_true_values_to_tib)
 export(benchmark_table)
 export(compile_stan_model)
+export(compute_probs)
+export(cutpoints_to_probs)
 export(dELGW)
 export(data_2_init)
 export(data_2_stan)
 export(dordered)
+export(dordered_logistic)
+export(dordered_skew_logistic)
 export(em_tib_to_init)
 export(fit_em)
 export(get_means_tib)
@@ -49,6 +53,8 @@ export(read_wider_data)
 export(read_wider_imputed_data)
 export(results_to_tib)
 export(rordered)
+export(rordered_logistic)
+export(rordered_skew_logistic)
 export(save_or_run_model)
 export(scatterplot_retrieval)
 export(simulate_data_crm)
@@ -68,4 +74,5 @@ importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,theme_bw)
 importFrom(jaspGraphs,geom_rangeframe)
 importFrom(jaspGraphs,themeJaspRaw)
+importFrom(rlang,"%||%")
 importFrom(tibble,tibble)
