--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(get_no_time_points)
 export(get_np)
 export(get_nr)
 export(get_obs_proportions)
+export(get_probs_ordered_logistic_cpp)
 export(get_score)
 export(inspect_probability_plot)
 export(is.logistic_regression_data)
@@ -60,6 +61,8 @@ export(scatterplot_retrieval)
 export(simulate_data_crm)
 export(simulate_data_ltm)
 export(simulate_logistic_regression)
+import(Rcpp)
+importFrom(Rcpp,evalCpp)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.count)
 importFrom(assertthat,is.flag)
@@ -76,3 +79,4 @@ importFrom(jaspGraphs,geom_rangeframe)
 importFrom(jaspGraphs,themeJaspRaw)
 importFrom(rlang,"%||%")
 importFrom(tibble,tibble)
+useDynLib(CCTLogistic)
