updates with new data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(results_to_tib)
 export(rordered)
 export(rordered_logistic)
 export(rordered_skew_logistic)
+export(save_figure)
 export(save_or_run_model)
 export(scatterplot_retrieval)
 export(simulate_data_crm)
