--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(inspect_probability_plot)
 export(is.logistic_regression_data)
 export(is.logistic_regression_ltm_data)
 export(is.ltm_data)
+export(load_figure_obj)
 export(log_likelihood_ltm)
 export(normalize_factor)
 export(pELGW)
@@ -50,6 +51,7 @@ export(qELGW)
 export(rELGW)
 export(read_data)
 export(read_long_data)
+export(read_violence_data)
 export(read_wide_data)
 export(read_wider_data)
 export(read_wider_imputed_data)
@@ -58,6 +60,7 @@ export(rordered)
 export(rordered_logistic)
 export(rordered_skew_logistic)
 export(save_figure)
+export(save_figure_obj)
 export(save_or_run_model)
 export(scatterplot_retrieval)
 export(simulate_data_crm)
