--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(pplot)
 export(qELGW)
 export(rELGW)
 export(read_data)
+export(read_ifte_data)
 export(read_long_data)
 export(read_violence_data)
 export(read_wide_data)
